--- a/style.css
+++ b/style.css
@@ -153,6 +153,16 @@ form {
     flex-direction: column;
 }
 
+input {
+    padding: 10px;
+    margin-top: 5px;
+    border: 0px;
+    box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+    border-radius: 10px;
+}
+
+
+
 
 
 #phrase {
