--- a/style.css
+++ b/style.css
@@ -145,7 +145,8 @@ form {
 
 .inputVals {
     display: flex;
-    gap: 50px;
+    flex-wrap: wrap;
+    gap: 80px;
 }
 
 .leftEntries, .rightEntries {
@@ -158,7 +159,9 @@ input {
     margin-top: 5px;
     border: 0px;
     box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
-    border-radius: 10px;
+    border-radius: 13px;
+    width: 30vh;
+    
 }
 
 
