--- a/style.css
+++ b/style.css
@@ -154,6 +154,11 @@ form {
     flex-direction: column;
 }
 
+.inputField {
+    display: flex;
+    flex-direction: column;
+}
+
 input {
     padding: 10px;
     margin-top: 5px;
