--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ form {
 }
 
 .entries {
-    height: 30vh;
+    height: 35vh;
     padding: 40px;
     display: flex;
     flex-direction: column;
@@ -152,6 +152,7 @@ form {
 .leftEntries, .rightEntries {
     display: flex;
     flex-direction: column;
+    gap: 15px;
 }
 
 .inputField {
