--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ html,body {
 }
 
 .regForm {
-    background-color: #e6fff5;
+    background-color: #f9f9f9;
 }
 
 form {
@@ -139,7 +139,7 @@ form {
     padding: 40px;
     display: flex;
     flex-direction: column;
-    background-color: #33ffad;
+    background-color: #f5f5f5;
     gap: 50px;
 }
 
