--- a/style.css
+++ b/style.css
@@ -179,7 +179,16 @@ input {
     border-radius: 5px;
     border: 0px;
     box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+}
 
+#login {
+    padding-left: 40px;
+    padding-top: 20px;
+}
+
+#loginLink {
+    font-weight: bold;
+    text-decoration: none;
 }
 
 @media (max-width: 890px){ /*for mobile responsiveness*/
