--- a/style.css
+++ b/style.css
@@ -206,6 +206,7 @@ input {
 
     .statements {
         height: 25vh;
+        padding: 50px;
     }
 
     .logo {
@@ -213,7 +214,7 @@ input {
     }
 
     .entries {
-        height: 80vh;
+        height: 90vh;
     }
 }
 
