--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ html,body {
 }
 
 .regForm {
-    background-color: #f9f9f9;
+    background-color: #f5f5f5;
 }
 
 form {
@@ -121,7 +121,6 @@ form {
     padding: 40px;
     margin-bottom: 30px;
     gap: 50px;
-    color: wheat;
 }
 
 .statements p {
@@ -139,7 +138,7 @@ form {
     padding: 40px;
     display: flex;
     flex-direction: column;
-    background-color: #f5f5f5;
+    background-color: #f9f9f9;
     gap: 50px;
 }
 
@@ -167,8 +166,7 @@ label {
 input {
     padding: 10px;
     margin-top: 5px;
-    border: 0px;
-    box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+    border: 1px solid #ececec;
     border-radius: 8px;
     width: 30vh;
 }
@@ -183,6 +181,7 @@ input {
     border-radius: 5px;
     border: 0px;
     box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+    background-color: #f9f9f9;
 }
 
 #login {
