--- a/style.css
+++ b/style.css
@@ -171,6 +171,12 @@ input {
     width: 30vh;
 }
 
+input:focus{
+    outline: none;
+    border: 3px solid green;
+    box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+}
+
 #phrase {
     font-size: 20px;
 }
